err/btsbots-wallet.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Babel-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Babel-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Login-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/Flask_SocketIO-2.9.3.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/babel'...
Listing './lib/python3.5/site-packages/babel/locale-data'...
Listing './lib/python3.5/site-packages/babel/localtime'...
Listing './lib/python3.5/site-packages/babel/messages'...
Listing './lib/python3.5/site-packages/bts'...
Listing './lib/python3.5/site-packages/bts/ws'...
Listing './lib/python3.5/site-packages/bts-0.6.17.egg-info'...
Listing './lib/python3.5/site-packages/btsbots_wallet'...
Listing './lib/python3.5/site-packages/btsbots_wallet/static'...
Listing './lib/python3.5/site-packages/btsbots_wallet/static/css'...
Listing './lib/python3.5/site-packages/btsbots_wallet/static/dist'...
Listing './lib/python3.5/site-packages/btsbots_wallet/static/dist/css'...
Listing './lib/python3.5/site-packages/btsbots_wallet/static/dist/js'...
Listing './lib/python3.5/site-packages/btsbots_wallet/static/fonts'...
Listing './lib/python3.5/site-packages/btsbots_wallet/static/js'...
Listing './lib/python3.5/site-packages/btsbots_wallet/templates'...
Listing './lib/python3.5/site-packages/btsbots_wallet/templates/pages'...
Listing './lib/python3.5/site-packages/btsbots_wallet/translations'...
Listing './lib/python3.5/site-packages/btsbots_wallet/translations/zh'...
Listing './lib/python3.5/site-packages/btsbots_wallet/translations/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/btsbots_wallet-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/ecdsa'...
Listing './lib/python3.5/site-packages/ecdsa-0.13.dist-info'...
Listing './lib/python3.5/site-packages/engineio'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_babel'...
Listing './lib/python3.5/site-packages/flask_login'...
Listing './lib/python3.5/site-packages/flask_socketio'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gevent_socketio-0.3.6.egg-info'...
Listing './lib/python3.5/site-packages/gevent_websocket-0.10.1.dist-info'...
Listing './lib/python3.5/site-packages/geventwebsocket'...
Listing './lib/python3.5/site-packages/geventwebsocket/gunicorn'...
Listing './lib/python3.5/site-packages/geventwebsocket/protocols'...
Listing './lib/python3.5/site-packages/grapheneapi'...
Listing './lib/python3.5/site-packages/graphenebase'...
Listing './lib/python3.5/site-packages/grapheneexchange'...
Listing './lib/python3.5/site-packages/grapheneextra'...
Listing './lib/python3.5/site-packages/graphenelib-0.4.8.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylibscrypt'...
Listing './lib/python3.5/site-packages/pylibscrypt-1.5.3.egg-info'...
Listing './lib/python3.5/site-packages/python_engineio-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/python_socketio-1.8.4.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/scrypt-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/socketio'...
Compiling './lib/python3.5/site-packages/socketio/virtsocket.py'...
***   File "./lib/python3.5/site-packages/socketio/virtsocket.py", line 365
    except (ValueError, KeyError, Exception), e:
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.37.0.egg-info'...
Listing './lib/python3.5/site-packages/websockets'...
Listing './lib/python3.5/site-packages/websockets/extensions'...
Listing './lib/python3.5/site-packages/websockets/py35'...
Listing './lib/python3.5/site-packages/websockets-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
